# iomentum-backend-practice

./: .env.template  Cargo.toml  README.md  compose.dev.yml  init-db.sh
.sqlx/: query-4b1a96e80758bd72b1ce3163aca4cecf325011716fc4189094f01676cf8b6bfc.json
migrations/: 20240924084157_create_basic_ticket_table.sql  20240926073021_add_user_table.sql
src/: config.rs  controller.rs  lib.rs  main.rs  routes.rs  state.rs
src/domain/: errors.rs  mod.rs
src/domain/dtos/: mod.rs  ticket_dtos.rs  user_dtos.rs
src/domain/types/: jwt_claims.rs  mod.rs  password.rs  role.rs  ticket_types.rs  user_types.rs  username.rs
src/handlers/: errors.rs  jwt_handler.rs  mod.rs  password_hasher.rs  tickets.rs  users.rs
src/models/: mod.rs  pg_tickets.rs  pg_users.rs  tickets.rs  users.rs
src/routes/: mod.rs  tickets.rs  users.rs  with_db.rs  with_state.rs
tests/: auth_tests.rs  health_check.rs  helper.rs  ticket_tests.rs  user_tests.rs
tests/snapshots/: user_tests__crud_users_works-2.snap.new  user_tests__crud_users_works.snap
