[package]
name = "iommentum-backend-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
anyhow = "1.0.38"
uuid = { features = ["serde", "v4"], version = "1.10.0"}
sqlx = { version = "0.8.2", features = [ "postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0.64"
once_cell = "1.19.0"
dotenv = "0.15.0"
thiserror = "1.0.64"
